kubernetes/apps/janet/jina-reader/reader-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jina-reader
spec:
  selector:
    app: jina-reader
  ports:
    - name: http
      port: 8081
      targetPort: 8081
